jerry-core/parser/js/new-parser/tests/js/function-rest.js
/* This test contains rest parameter tests. */

function f(...a) {
}

function g(a = 6, b = 7 + 8, ...c) {
}

function h(...a, b) {
}
